# bluemap-action

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: bluemap.yml  test-act.yml
global_config/bluemap_web/lang/: en.conf  settings.conf  zh-TW.conf  zh_TW.conf
scripts/: 00_pydactyl_s3.py  01_unarchive.py  02_index_js_fixer.py  03_replacer.py  sftp_downloader.py
