[tool.poetry]
name = "bluemap-action"
version = "0.0.1"
description = ""
authors = ["Miku <26039249+xMikux@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
pysftp = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
