[tool.poetry]
name = "bluemap-action"
version = "1.0.0"
description = ""
authors = ["Miku <26039249+xMikux@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pysftp = "^0.2.9"
py-dactyl = "^2.0.4"
pooch = "^1.8.2"
tqdm = "^4.66.5"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
